# Spiral

./: .gitignore  .gitlab-ci.yml  Build Instructions.txt  CHANGELOG  CMakeLists.txt  CONTRIBUTING  README.md  Spiral.pro  Spiral.pro.user.6f2e008  Spiral.pro.user.d0448a6  constants.h  draglayout.cpp  draglayout.h  dragresizelabel.cpp  dragresizelabel.h  dragwidget.cpp  dragwidget.h  icon.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mrichtextedit.cpp  mrichtextedit.h  mrichtextedit.ui  mtextedit.cpp  mtextedit.h  nohup.out  resourcehandler.cpp  resourcehandler.h  spiralstringlist.h  tango.qrc  textbox.cpp  textbox.h
cmake/: CompilerWarnings.cmake
icons/tango/: tango.qrc  tango.rcc
src/: CMakeLists.txt  constants.cpp  constants.h  draglayout.cpp  draglayout.h  dragresizelabel.cpp  dragresizelabel.h  graphics_view_zoom.cpp  graphics_view_zoom.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mrichtextedit.cpp  mrichtextedit.h  mrichtextedit.ui  mtextedit.cpp  qzoomscrollarea.cpp  qzoomscrollarea.h  scalableqwidget.cpp  scalableqwidget.h  spiralstringlist.h  textbox.cpp  textbox.h
src/structure/: notebook.h  page.h  searchresult.h  section.h  spiralcomponent.h
structure/: notebook.h  page.h  searchresult.h  section.h  spiralcomponent.h
